--- a/app/src/main/res/layout/activity_token.xml
+++ b/app/src/main/res/layout/activity_token.xml
@@ -3,13 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center"
     android:padding="16dp">
 
-    <TextView
-        android:id="@+id/tokenTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Token: "
-        android:textSize="18sp" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewRestaurants"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
