--- a/app/src/main/res/layout/activity_carrito.xml
+++ b/app/src/main/res/layout/activity_carrito.xml
@@ -16,4 +16,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         tools:listitem="@layout/item_carrito" />
 
+    <Button
+        android:id="@+id/btnRealizarPedido"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Realizar Pedido"
+        app:layout_constraintTop_toBottomOf="@id/recyclerViewCarrito"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_margin="16dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
