--- a/app/src/main/res/layout/activity_carrito.xml
+++ b/app/src/main/res/layout/activity_carrito.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/beige"
     tools:context=".CarritoActivity">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -21,6 +22,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Realizar Pedido"
+        android:textColor="@color/beige"
+        android:backgroundTint="@color/rojo"
         app:layout_constraintTop_toBottomOf="@id/recyclerViewCarrito"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
