--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -27,5 +27,7 @@
         android:id="@+id/register_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/beige"
+        android:backgroundTint="@color/rojo"
         android:text="Registrar" />
 </LinearLayout>
