--- a/app/src/main/res/layout/activity_token.xml
+++ b/app/src/main/res/layout/activity_token.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/beige"
     android:padding="16dp">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -22,5 +23,7 @@
         android:text="Ver pedidos"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:textColor="@android:color/white"
+        android:backgroundTint="@android:color/holo_red_light"
         app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
