--- a/app/src/main/res/layout/activity_carrito.xml
+++ b/app/src/main/res/layout/activity_carrito.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/beige"
-    tools:context=".CarritoActivity">
+    tools:context=".Activities.CarritoActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewCarrito"
