--- a/app/src/main/res/layout/activity_pedido.xml
+++ b/app/src/main/res/layout/activity_pedido.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/beige"
-    tools:context=".PedidoActivity">
+    tools:context=".Activities.PedidoActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewPedidos"
