--- a/app/src/main/res/layout/item_carrito.xml
+++ b/app/src/main/res/layout/item_carrito.xml
@@ -50,6 +50,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="@color/beige"
+        android:backgroundTint="@color/rojo"
         android:layout_marginStart="8dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
